.k8s/e2e_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: searchtelegrame2e
  namespace: default
  labels:
    run: searchtelegrame2e
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: searchtelegrame2e
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: searchtelegrame2e
  name: searchtelegrame2e
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: searchtelegrame2e
  template:
    metadata:
      labels:
        run: searchtelegrame2e
    spec:
      containers:
      - name: searchtelegrame2e
        image: daocloud.io/knarfeh/searchtelegrame2e:feat-knarfeh-dev-64a5592
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            protocol: TCP
      imagePullSecrets:
        - name: daocloud

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: searchtelegrame2e
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE"
spec:
  tls:
  - hosts:
    - e2e.searchtelegram.com
    secretName: searchtelegrame2e-tls
  rules:
  - host: e2e.searchtelegram.com
    http:
      paths:
      - path: /
        backend:
          serviceName: searchtelegrame2e
          servicePort: 80
