.k8s/prod_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: searchtelegramprod
  namespace: default
  labels:
    run: searchtelegramprod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: searchtelegramprod
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: searchtelegramprod
  name: searchtelegramprod
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: searchtelegramprod
  template:
    metadata:
      labels:
        run: searchtelegramprod
    spec:
      containers:
      - name: searchtelegramprod
        image: daocloud.io/knarfeh/searchtelegramprivate
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            protocol: TCP
      imagePullSecrets:
        - name: daocloud

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: searchtelegramprod
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/limit-rps: "1"
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;"
spec:
  tls:
  - hosts:
    - searchtelegram.com
    secretName: searchtelegramprod-tls
  rules:
  - host: searchtelegram.com
    http:
      paths:
      - path: /
        backend:
          serviceName: searchtelegramprod
          servicePort: 80
